AC_INIT()

AM_INIT_AUTOMAKE(aqsis, 1.1.0)
AC_PREFIX_DEFAULT(/usr/local/aqsis)
AM_CONFIG_HEADER(libaqsistypes/config.h)

AC_DEFINE(STRNAME, "Aqsis", [Application Name] )

AC_LANG_CPLUSPLUS
AC_PROG_CXX

AM_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PROG_LEX
AC_PROG_YACC
AC_EXEEXT

AC_C_BIGENDIAN

AQSIS_CHECK_FLTK
AQSIS_CHECK_LIBJPEG
AQSIS_CHECK_LIBTIFF
AQSIS_CHECK_LIBZ

AQSIS_WITH_DEBUGGING
AQSIS_WITH_OPENEXR
AQSIS_WITH_PLUGINS
AQSIS_WITH_PROFILING
AQSIS_WITH_XSLTPROC

AC_SUBST(AQSIS_CPPFLAGS)
AC_SUBST(AQSIS_CXXFLAGS)
AC_SUBST(AQSIS_CFLAGS)
AQSIS_CPPFLAGS=""
AQSIS_CXXFLAGS="$AQSIS_DEBUG_CFLAGS $AQSIS_PROFILE_CFLAGS $PTHREAD_CFLAGS"
AQSIS_CFLAGS="$AQSIS_DEBUG_CFLAGS $AQSIS_PROFILE_CFLAGS $PTHREAD_CFLAGS"

AC_CONFIG_FILES([
Makefile
all/AdditionalDeveloperLibs/Makefile 
all/Makefile 
aqsis/Makefile 
aqsl/Makefile 
aqsl/tests/Makefile 
aqsltell/Makefile 
bin/Makefile 
boost/Makefile 
boost/boost/Makefile 
boost/boost/bind/Makefile 
boost/boost/config/Makefile 
boost/boost/config/compiler/Makefile 
boost/boost/config/platform/Makefile 
boost/boost/config/stdlib/Makefile 
boost/boost/detail/Makefile 
boost/boost/filesystem/Makefile 
boost/boost/function/Makefile 
boost/boost/function/detail/Makefile 
boost/boost/mpl/Makefile 
boost/boost/mpl/aux_/Makefile 
boost/boost/mpl/aux_/config/Makefile 
boost/boost/mpl/aux_/preprocessed/Makefile 
boost/boost/mpl/aux_/preprocessed/bcc/Makefile 
boost/boost/mpl/aux_/preprocessed/bcc551/Makefile 
boost/boost/mpl/aux_/preprocessed/gcc/Makefile 
boost/boost/mpl/aux_/preprocessed/msvc60/Makefile 
boost/boost/mpl/aux_/preprocessed/msvc70/Makefile 
boost/boost/mpl/aux_/preprocessed/mwcw/Makefile 
boost/boost/mpl/aux_/preprocessed/no_ctps/Makefile 
boost/boost/mpl/aux_/preprocessed/no_ttp/Makefile 
boost/boost/mpl/aux_/preprocessed/plain/Makefile 
boost/boost/mpl/aux_/preprocessor/Makefile 
boost/boost/mpl/aux_/range_c/Makefile 
boost/boost/mpl/limits/Makefile 
boost/boost/mpl/list/Makefile 
boost/boost/mpl/list/aux_/Makefile 
boost/boost/mpl/list/aux_/preprocessed/Makefile 
boost/boost/mpl/list/aux_/preprocessed/plain/Makefile 
boost/boost/mpl/math/Makefile 
boost/boost/mpl/vector/Makefile 
boost/boost/mpl/vector/aux_/Makefile 
boost/boost/mpl/vector/aux_/preprocessed/Makefile 
boost/boost/mpl/vector/aux_/preprocessed/no_ctps/Makefile 
boost/boost/mpl/vector/aux_/preprocessed/plain/Makefile 
boost/boost/mpl/vector/aux_/preprocessed/typeof_based/Makefile 
boost/boost/multi_array/Makefile 
boost/boost/pending/Makefile 
boost/boost/pending/detail/Makefile 
boost/boost/pool/Makefile 
boost/boost/pool/detail/Makefile 
boost/boost/preprocessor/Makefile 
boost/boost/preprocessor/arithmetic/Makefile 
boost/boost/preprocessor/arithmetic/detail/Makefile 
boost/boost/preprocessor/array/Makefile 
boost/boost/preprocessor/comparison/Makefile 
boost/boost/preprocessor/config/Makefile 
boost/boost/preprocessor/control/Makefile 
boost/boost/preprocessor/control/detail/Makefile 
boost/boost/preprocessor/control/detail/edg/Makefile 
boost/boost/preprocessor/control/detail/msvc/Makefile 
boost/boost/preprocessor/debug/Makefile 
boost/boost/preprocessor/detail/Makefile 
boost/boost/preprocessor/facilities/Makefile 
boost/boost/preprocessor/iteration/Makefile 
boost/boost/preprocessor/iteration/detail/Makefile 
boost/boost/preprocessor/iteration/detail/bounds/Makefile 
boost/boost/preprocessor/iteration/detail/iter/Makefile 
boost/boost/preprocessor/list/Makefile 
boost/boost/preprocessor/list/detail/Makefile 
boost/boost/preprocessor/list/detail/edg/Makefile 
boost/boost/preprocessor/logical/Makefile 
boost/boost/preprocessor/punctuation/Makefile 
boost/boost/preprocessor/repetition/Makefile 
boost/boost/preprocessor/repetition/detail/Makefile 
boost/boost/preprocessor/repetition/detail/edg/Makefile 
boost/boost/preprocessor/repetition/detail/msvc/Makefile 
boost/boost/preprocessor/selection/Makefile 
boost/boost/preprocessor/seq/Makefile 
boost/boost/preprocessor/seq/detail/Makefile 
boost/boost/preprocessor/slot/Makefile 
boost/boost/preprocessor/slot/detail/Makefile 
boost/boost/preprocessor/tuple/Makefile 
boost/boost/random/Makefile 
boost/boost/random/detail/Makefile 
boost/boost/regex/Makefile 
boost/boost/regex/v3/Makefile 
boost/boost/spirit/Makefile 
boost/boost/spirit/attribute/Makefile 
boost/boost/spirit/core/Makefile 
boost/boost/spirit/core/composite/Makefile 
boost/boost/spirit/core/composite/impl/Makefile 
boost/boost/spirit/core/impl/Makefile 
boost/boost/spirit/core/meta/Makefile 
boost/boost/spirit/core/meta/impl/Makefile 
boost/boost/spirit/core/non_terminal/Makefile 
boost/boost/spirit/core/non_terminal/impl/Makefile 
boost/boost/spirit/core/primitives/Makefile 
boost/boost/spirit/core/primitives/impl/Makefile 
boost/boost/spirit/core/scanner/Makefile 
boost/boost/spirit/core/scanner/impl/Makefile 
boost/boost/spirit/debug/Makefile 
boost/boost/spirit/debug/impl/Makefile 
boost/boost/spirit/dyic/Makefile 
boost/boost/spirit/dyic/impl/Makefile 
boost/boost/spirit/dynamic/Makefile 
boost/boost/spirit/dynamic/impl/Makefile 
boost/boost/spirit/error_handling/Makefile 
boost/boost/spirit/error_handling/impl/Makefile 
boost/boost/spirit/iterator/Makefile 
boost/boost/spirit/iterator/impl/Makefile 
boost/boost/spirit/phoenix/Makefile 
boost/boost/spirit/symbols/Makefile 
boost/boost/spirit/symbols/impl/Makefile 
boost/boost/spirit/tree/Makefile 
boost/boost/spirit/tree/impl/Makefile 
boost/boost/spirit/utility/Makefile 
boost/boost/spirit/utility/impl/Makefile 
boost/boost/spirit/utility/impl/chset/Makefile 
boost/boost/thread/Makefile 
boost/boost/thread/detail/Makefile 
boost/boost/tuple/Makefile 
boost/boost/tuple/detail/Makefile 
boost/boost/type_traits/Makefile 
boost/boost/type_traits/detail/Makefile 
boost/boost/utility/Makefile 
boost/libs/Makefile 
boost/libs/filesystem/Makefile 
boost/libs/filesystem/src/Makefile 
boost/libs/mpl/Makefile 
boost/libs/mpl/preprocessed/Makefile 
boost/libs/mpl/preprocessed/list/Makefile 
boost/libs/mpl/preprocessed/src/Makefile 
boost/libs/mpl/preprocessed/vector/Makefile 
boost/libs/regex/Makefile 
boost/libs/regex/src/Makefile 
boost/libs/thread/Makefile 
boost/libs/thread/src/Makefile 
boost/libs/thread/src/mac/Makefile 
boost/libs/thread/src/mac/msl_replacements/Makefile 
display/Makefile 
dsotest/Makefile 
images/Makefile 
libaqsistypes/Makefile 
libaqsistypes/posix/Makefile 
libaqsistypes/win32/Makefile 
libaqsistypes/win32/intel/Makefile 
libargparse/Makefile 
libcodegenvm/Makefile 
libddmanager/Makefile 
libraytrace/Makefile 
libri2rib/Makefile 
librib2/Makefile 
librib2/tests/Makefile 
librib2ri/Makefile 
librib2stream/Makefile 
libshaderexecenv/Makefile 
libshadervm/Makefile 
libslparse/Makefile 
libslxargs/Makefile 
man/Makefile 
man/aqsis.1 
plugins/Makefile 
plugins/bake2tif/Makefile 
plugins/bmp2tif/Makefile 
plugins/common/Makefile 
plugins/exr2tif/Makefile 
plugins/gif2tif/Makefile 
plugins/jpg2tif/Makefile 
plugins/pcx2tif/Makefile 
plugins/ppm2tif/Makefile 
plugins/tga2tif/Makefile 
render/Makefile 
renderer.xcode/Makefile 
ribfiles/Makefile 
shaders/Makefile 
slpp/Makefile 
teqser/Makefile 
thirdparty/Makefile 
])

AC_OUTPUT

