AC_INIT()
AM_INIT_AUTOMAKE(aqsis,0.6.0002)
AC_PREFIX_DEFAULT(/usr/local/aqsis)

AC_DEFINE(STRNAME,"Aqsis")

AC_ARG_ENABLE(debug,
[  --enable-debug          compile with debugging [default=no]],
[case "${enableval}" in
  true) debug=true ;;
  false) debug=false ;;
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],
[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_ARG_ENABLE(plugins,
[  --enable-plugins        compile with image plugins support [default=no, requires shared lib support]],
[case "${enableval}" in
  true) plugins=true ;;
  false) plugins=false ;;
  yes) plugins=true ;;
  no) plugins=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-plugins) ;;
esac],
[plugins=false])
AM_CONDITIONAL(PLUGINS, test x$plugins = xtrue)

AC_PROG_CXX
AM_ENABLE_SHARED
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
AC_EXEEXT

dnl OpenGL
HAVE_OPENGL
HAVE_GLUT

dnl TIFF library
HAVE_LIBTIFF

dnl Needed by librib2/bdec.cpp. Define WORDS_BIGENDIAN.
AC_C_BIGENDIAN

AC_OUTPUT( \
all/Makefile \
aqsis/Makefile \
aqsl/Makefile \
aqsl/tests/Makefile \
filebuffer/Makefile \
framebuffer_glut/Makefile \
framebuffer_glut_z/Makefile \
images/Makefile \
libaqsistypes/Makefile \
libaqsistypes/posix/Makefile \
libaqsistypes/win32/Makefile \
libaqsistypes/win32/intel/Makefile \
libcodegenvm/Makefile \
libdd/Makefile \
libddmsimple/Makefile \
libddmsock/Makefile \
libri2rib/Makefile \
librib2/Makefile \
librib2/tests/Makefile \
librib2ri/Makefile \
librib2stream/Makefile \
libslparse/Makefile \
render/Makefile \
render/macosx/Makefile \
render/macosx/std/Makefile \
ribfiles/Makefile \
shaders/Makefile \
shadowmap/Makefile \
slpp/Makefile \
teqser/Makefile \
aqsltell/Makefile \
plugins/Makefile \
plugins/common/Makefile \
plugins/gif2tif/Makefile \
plugins/jpg2tif/Makefile \
plugins/ppm2tif/Makefile \
plugins/pcx2tif/Makefile \
plugins/tga2tif/Makefile \
releasearchive/Makefile \
Makefile )

