AC_INIT()
dnl AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(aqsis, 0.7.19)
AM_CONFIG_HEADER(libaqsistypes/config.h)

AC_DEFINE(STRNAME,"Aqsis", [Application Name] )
AC_PREFIX_DEFAULT(/usr/local/aqsis)

AC_ARG_ENABLE(debug,
[  --enable-debug          compile with debugging [default=no]],
[case "${enableval}" in
  true) debug=true ;;
  yes) debug=true ;;
  false) debug=false ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],
[debug=false])
if test x$debug = xtrue ; then
  AC_DEFINE(_DEBUG,[],"Enable additional debug code.")
  DEBUG_FLAGS="-g -Wall" 
  OPT_FLAGS="-O0"
else
  AC_DEFINE(NDEBUG,[],"Disable C99 asserts.")
  DEBUG_FLAGS="" 
  OPT_FLAGS="-O2"
fi
  
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_ARG_ENABLE(profile,
[  --enable-profile          compile with profiling [default=no]],
[case "${enableval}" in
  true) profile=true ;;
  yes) profile=true ;;
  false) profile=false ;;
  no)  profile=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-profile) ;;
esac],
[profile=false])
if test x$profile = xtrue ; then
  DEBUG_FLAGS="-g -Wall -pg -ftest-coverage -fprofile-arcs" 
  OPT_FLAGS="-O0"
  LDFLAGS="-lc_p"
fi

AM_CONDITIONAL(PROFILE, test x$profile = xtrue)


AC_ARG_ENABLE(plugins,
[  --enable-plugins        compile with plugin support [default=yes, requires shared lib support]],
[case "${enableval}" in
  true) plugins=true ;;
  yes) plugins=true ;;
  false) plugins=false ;;
  no) plugins=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-plugins) ;;
esac],

[plugins=true])
if test x$plugins = xtrue ; then
  PLUGIN_FLAGS="-ldl"; AC_DEFINE(PLUGINS,,"Supprt dynamically loaded plugins") 
else
  PLUGIN_FLAGS=""
fi
AM_CONDITIONAL(PLUGINS, test x$plugins = xtrue)
AC_SUBST(PLUGIN_FLAGS)


AC_PROG_CXX
AM_ENABLE_SHARED
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
AC_EXEEXT

dnl Needed by librib2/bdec.cpp. Define WORDS_BIGENDIAN.
AC_C_BIGENDIAN

dnl Check for OpenGL and glut
MDL_HAVE_OPENGL
AM_CONDITIONAL(OPENGL, test x$have_glut = xyes)
if test x$have_glut = xno ; then
	AC_MSG_WARN([*** Could not find GLUT, glut based framebuffer devices will not be built ***]);
fi

dnl Log4CPP for loggging support
AC_LANG_SAVE
AC_LANG(C++)
AM_PATH_LOG4CPP
AC_LANG_RESTORE
if test -z "$LOG4CPP_LIBS" ; then
	AC_MSG_ERROR([*** Could not find Log4cpp, check it is installed, with headers, and try again ***]);
fi

dnl TIFF library
saveCFLAGS=$CFLAGS
HAVE_LIBTIFF
CFLAGS=$TIFF_INC
AC_CHECK_HEADER(tiff.h)
CFLAGS=$saveCFLAGS
if test ! "$ac_cv_header_tiff_h" ; then
        AC_MSG_ERROR([*** Cannot find tiff.h, please ensure you have libtiff installed ***]);
fi

CPPFLAGS="-DBASE_PATH=\\\"\"$datadir\\\"\" -DCONFIG_PATH=\\\"\"$sysconfdir\\\"\""
CXXFLAGS="$DEBUG_FLAGS $OPT_FLAGS"
CFLAGS="$DEBUG_FLAGS $OPT_FLAGS"

AC_OUTPUT( \
all/Makefile \
aqsis/Makefile \
aqsl/Makefile \
aqsl/tests/Makefile \
filebuffer/Makefile \
framebuffer_glut/Makefile \
framebuffer_glut_z/Makefile \
images/Makefile \
libaqsistypes/Makefile \
libaqsistypes/posix/Makefile \
libaqsistypes/win32/Makefile \
libaqsistypes/win32/intel/Makefile \
libcodegenvm/Makefile \
libdd/Makefile \
libddmsimple/Makefile \
libddmsock/Makefile \
libri2rib/Makefile \
librib2/Makefile \
librib2/tests/Makefile \
librib2ri/Makefile \
librib2stream/Makefile \
libslparse/Makefile \
render/Makefile \
render/macosx/Makefile \
render/macosx/std/Makefile \
ribfiles/Makefile \
shaders/Makefile \
shadowmap/Makefile \
slpp/Makefile \
teqser/Makefile \
aqsltell/Makefile \
plugins/Makefile \
plugins/common/Makefile \
plugins/gif2tif/Makefile \
plugins/jpg2tif/Makefile \
plugins/ppm2tif/Makefile \
plugins/pcx2tif/Makefile \
plugins/tga2tif/Makefile \
plugins/bake2tif/Makefile \
libslxargs/Makefile \
libshadervm/Makefile \
libshaderexecenv/Makefile \
libargparse/Makefile \
dsotest/Makefile \
Makefile )

