PROJECT(ARGPARSE)

INCLUDE(${PROJECT_SOURCE_DIR}/export.cmake)

SET(ARGPARSE_SRCS argparse.cpp)
SET(ARGPARSE_HDRS argparse.h)

IF(WIN32)
	ADD_LIBRARY(aqsisargparse STATIC ${ARGPARSE_SRCS} ${ARGPARSE_HDRS} ${INFORES_SRCS})
ELSE(WIN32)
	ADD_LIBRARY(aqsisargparse SHARED ${ARGPARSE_SRCS} ${ARGPARSE_HDRS} ${INFORES_SRCS})
	SET_TARGET_PROPERTIES(aqsisargparse PROPERTIES VERSION "${MAJOR}.${MINOR}" SOVERSION ${MAJOR})
ENDIF(WIN32)

INSTALL(TARGETS aqsisargparse
	RUNTIME DESTINATION ${BINDIR}
	LIBRARY DESTINATION ${LIBDIR}
	ARCHIVE DESTINATION ${LIBDIR})

SOURCE_GROUP("Header Files" FILES ${ARGPARSE_HDRS})
